--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Kamila Mattos <99353050+KamilaMattos@users.noreply.github.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/app.ts",
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
     "test": "jest",
     "build":"tsc",
