--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ DB_PASSWORD=
 DB_HOST=
 DB=
 SECRET_KEY= 
-DB_URL="postgres://user:password@localhost:5432/db"
+DB_URL="postgres://<username>:<pass>@<host>:<port>/<db>"
