feat: get (all) labExams

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ DB_PASSWORD=
 DB_HOST=
 DB=
 SECRET_KEY= 
-DB_URL="postgres://user:password@localhost:5432/db"
+DATABASE_URL="postgres://user:password@localhost:5432/db"
