feat: testing sending email

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DB_HOST=
 DB=
 SECRET_KEY= 
 DB_URL="postgres://user:password@localhost:5432/db"
+SMTP_USER=email_da_aplicacao@outlook.com
+SMTP_PASS=senha_do_email
