--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "jest": "^29.0.2",
@@ -32,6 +33,7 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.9",
