--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
   "scripts": {
     "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "test": "jest",
+    "test": "NODE_ENV=test jest",
     "build": "tsc",
     "start": "node dist/src/server.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
-    "@types/jest": "^29.0.0",
+    "@types/jest": "^29.0.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/nodemailer": "^6.4.5",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
-    "jest": "^29.0.2",
+    "jest": "^29.0.3",
     "sqlite3": "^5.0.11",
     "supertest": "^6.2.4",
+    "ts-jest": "^29.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   },
