--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "@types/jest": "^29.0.2",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
+    "jest": "^29.0.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.8",
     "pg": "^8.8.0",
